pipeline/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-ocp-pipelines-demo-app-route
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: ocp-pipelines-demo-app-event-listener
spec:
  to:
    kind: Service
    name: el-ocp-pipelines-demo-app-event-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
